Refactor: Replace get(0) with getFirst() for improved readability. Includes documentation edits and other small deprecation/modernization efforts.